# trees

./: .gitignore  pyproject.toml
notebooks/: data_filler.ipynb  myers_eda.ipynb
scripts/: data_filler.py  load_data.py
xander/eda/: README_MAP.md  base_analysis.ipynb  further_analysis.ipynb  make xslsx inot csv.ipynb  map_frontend.html  prepare_map_data.py
xander/frontend/: README.md  map_frontend.html  prepare_map_data.py
xander/satellite_poc/: satelite_viewer.ipynb
