[project]
name = "trees"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "earthengine-api>=0.1.400",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "opencv-python>=4.8.0",
    "optuna>=4.7.0",
    "pandas>=3.0.0",
    "pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
]
